ui: update css for ui enhancements

--- a/projects/uni-table-demo/src/app/components/client-side-table/client-side-table.component.scss
+++ b/projects/uni-table-demo/src/app/components/client-side-table/client-side-table.component.scss
@@ -1,6 +1,9 @@
-.btn-primary{
-    width: fit-content; 
-    flex-wrap: nowrap;
-    display: inline-flex;
-    gap: .5rem;
+.btn-primary {
+  width: fit-content;
+  flex-wrap: nowrap;
+  display: inline-flex;
+  gap: 0.5rem;
+}
+.btn {
+  max-height: 36px;
 }
